--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -40,3 +40,6 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+        
+title: Octocat's homepage
+description: Bookmark this to keep an eye on my project updates!
