--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,8 +26,8 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      title: Octocat's homepage
-      description: Bookmark this to keep an eye on my project updates!
+      #title: Octocat's homepage
+      #description: Bookmark this to keep an eye on my project updates!
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
